[package]
name = "advisories-to-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17"
rayon = "1.5"
rusqlite = { version = "0.28", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"